--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,11 @@ bin/
 
 ### NetBeans ###
 /nbproject/private/
-/build/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
+/build/
 
-.DS_Store
-.vscode
+### VS Code ###
+.vscode/
