--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: java
-jdk: oraclejdk8
+jdk: openjdk8
 sudo: false
 
 services:
   - docker
 
-
 script:
-  - ./gradlew clean build
+  - ./mvnw clean verify
