Setup Heroku deployment, SonarCloud integration etc.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 
+################### Logging Configuration ##########################
+logging.level.root=INFO
+#logging.file=todo-api.log
+logging.level.com.sivalabs=DEBUG
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate.sql=debug
+#logging.level.org.hibernate.type=trace
+
+################### DB Configuration ##########################
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
