--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
+################### App Configuration ##########################
+spring.application.name=TodoAPI
+info.app.name=TodoAPI
+info.app.description=Todo REST API
+info.app.version=@project.version@
+info.contact.name=Siva
+info.contact.email=sivalabs.in@gmail.com
+info.contact.url=http://sivalabs.in
+
+management.endpoints.web.exposure.include=*
+
+app.logstash-host=localhost
 
 ################### Logging Configuration ##########################
-logging.level.root=INFO
+#logging.level.root=INFO
 #logging.file=todo-api.log
-logging.level.com.sivalabs=DEBUG
+#logging.level.com.sivalabs=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate.sql=debug
 #logging.level.org.hibernate.type=trace
