--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -3,3 +3,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://todo-db:5432/appdb
 spring.datasource.username=siva
 spring.datasource.password=secret
+
+app.logstash-host=logstash
