Updating travis secrets.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.projectName=todo-api-spring-boot
 
 sonar.sources=src/main/
 sonar.tests=src/test/
+sonar.java.binaries=**/target/classes 
 #sonar.java.codeCoveragePlugin=jacoco
