--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=com.sivalabs:todo-api-spring-boot
 sonar.projectName=todo-api-spring-boot
 
-sonar.sources=src/main/
-sonar.tests=src/test/
-sonar.java.binaries=**/target/classes 
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
 #sonar.java.codeCoveragePlugin=jacoco
