--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sivalabs</groupId>
 	<artifactId>todo-api-spring-boot</artifactId>
 	<version>0.0.1</version>
 	<name>todo-api-spring-boot</name>
-	<description>Kart API using SpringBoot</description>
+	<description>Todo API using SpringBoot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
 		<problem-spring-web.version>0.25.0</problem-spring-web.version>
 		<logstash-logback.version>4.9</logstash-logback.version>
 
