Adding JWT security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ management.endpoints.web.exposure.include=*
 
 app.logstash-host=localhost
 
+application.jwt.issuer=TodoListAPI
+application.jwt.header=Authorization
+application.jwt.expiresIn=604800
+application.jwt.secret=supersecret
+
 ################### Logging Configuration ##########################
 #logging.level.root=INFO
 #logging.file=todo-api.log
