--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.2.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sivalabs</groupId>
@@ -16,10 +16,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+		<spring-cloud.version>Hoxton.M3</spring-cloud.version>
 		<problem-spring-web.version>0.25.0</problem-spring-web.version>
 		<logstash-logback.version>4.9</logstash-logback.version>
-
+		<jjwt.version>0.6.0</jjwt.version>
 		<jacoco.destFile>${project.build.directory}/coverage-reports/aggregate.exec</jacoco.destFile>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.organization>sivaprasadreddy-github</sonar.organization>
@@ -90,6 +90,15 @@
 			<version>2.9.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>problem-spring-web-starter</artifactId>
 			<version>${problem-spring-web.version}</version>
@@ -121,6 +130,11 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -183,16 +197,16 @@
 								<limit implementation="org.jacoco.report.check.Limit">
 									<counter>COMPLEXITY</counter>
 									<value>COVEREDRATIO</value>
-									<minimum>0.70</minimum>
+									<minimum>0.50</minimum>
 								</limit>
 							</limits>
 						</rule>
 					</rules>
 					<excludes>
 						<exclude>**/*Application.*</exclude>
+						<exclude>**/config/**</exclude>
 						<exclude>**/model/*</exclude>
 						<exclude>**/entity/*</exclude>
-						<exclude>**/config/*</exclude>
 					</excludes>
 				</configuration>
 				<executions>
@@ -302,6 +316,14 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
 
 	<profiles>
 		<profile>
