--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<modules>
 		<module>todo-ui-react</module>
 		<module>todo-api-spring-boot</module>
+		<module>todo-list-gatling-perf-tests</module>
 	</modules>
 
 </project>
