--- a/docker/docker-compose-elk.yml
+++ b/docker/docker-compose-elk.yml
@@ -24,7 +24,7 @@ services:
     container_name: logstash
     command: logstash -f /etc/logstash/conf.d/logstash.conf
     volumes:
-      - ../config:/etc/logstash/conf.d
+      - ../config/elk:/etc/logstash/conf.d
     ports:
       - "5000:5000"
     links:
