--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -4,22 +4,23 @@ services:
   grafana:
     image: grafana/grafana
     ports:
-    - 3000:3000
+      - 3000:3000
     volumes:
-    - grafana_data:/var/lib/grafana
+      - grafana_data:/var/lib/grafana
+      - ../config/grafana/provisioning/:/etc/grafana/provisioning/
     environment:
-    - GF_SECURITY_ADMIN_PASSWORD=admin
-    - GF_SECURITY_ADMIN_USER=admin
-    - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
     depends_on:
-    - prometheus
+      - prometheus
 
   prometheus:
     image: prom/prometheus
     ports:
       - 9090:9090
     volumes:
-      - ../config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     command:
       - --config.file=/etc/prometheus/prometheus.yml
@@ -29,4 +30,3 @@ volumes:
   grafana_data: {}
   esdata1:
     driver: local
-
